sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: dev
  labels:
    app: sonarqube
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
    - name: web
      port: 9000
      targetPort: 9000
